test/syc/bad/enumdupm.c
/*
 * Duplicate enum member 'e1'.
 */

enum e {
	e1,
	e1
};
